# socketio-esp-idf

./: CMakeLists.txt  Kconfig  README.md  component.mk  idf_component.yml  socketio_reverse_engineering.pcapng  tasks.json
include/: socketio.h  socketio_types.h  utility.h
main/: hello_world_main.c
src/: socketio.c  socketio.cpp  socketio_types.c  utility.c
